[package]
name = "wincounter"
description = "Binary win counter that supports ties"
version = "0.1.1"
authors = ["gaoler <gaoler@electronicpanopticon.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ContractBridge/wincounter.git"
homepage = "https://github.com/ContractBridge/wincounter"
exclude = [".github/workflows/*", ".gitignore", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
